# boggle-solver

./: CMakeLists.txt
src/: board.cpp  interface.cpp  interface.hpp  main.cpp  solver.cpp  solver.hpp
src/interface/: main_interface.cpp  main_interface.hpp
src/solver/: board.cpp  board.hpp  solver.cpp  solver.hpp
